Rename styles.scss to globals.scss, Replace main style import to globals.scss and fix ProductInfo order section not wrapping

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -8,15 +8,6 @@
   font-size: .75rem;
 }
 
-#menuNavbar {
-  button.navbar-toggler {
-    width: max-content;
-  }
-}
-
 .content p {
   color: $gray;
 }
-
-@import "section/header";
-@import "section/carousel";
